feat: Add custom portfolio canvas with forced light mantine theme

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ public/app
 public/portfolio
 !public/app/index.html
 !public/portfolio/index.html
+!public/portfolio/custom-canvas.html
 
 /out
 /checkouts
