Add bundle support with esbuild
* Added bundle support using esbuild, which means
  * Split cljs output into lib and main.
    main contains our code, while lib contains vendor code.
    lib is generated using esm module syntax, which allows for external
    tools to tree shake it.
  * tree shaking is done using esbuild.
  * The code generated by shadow-clj will descontruct the imports when
    we use the :refer syntax and that does not play well with the
    vendors being in another script (shadow bridge),thus we have to
    update the requires from cljs to use the :as syntax

--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "release:clj": "shadow-cljs release app",
     "test:watch": "shadow-cljs watch node-tests --config-merge \"{:autorun true}\"",
     "test": "shadow-cljs compile node-tests && node out/node-tests.js",
-    "start": "conc npm:watch:*",
-    "release": "conc npm:release:*"
+    "start": "conc -c auto npm:watch:*",
+    "release": "conc -c auto npm:release:* && npm run bundle:optimize",
+    "bundle": "esbuild --bundle public/app/lib.js --outfile=public/app/lib.bundle.js",
+    "watch:bundle": "npm run bundle -- --watch",
+    "bundle:optimize": "npm run bundle --  --analyze --metafile=.bundle.meta.json --define:NODE_ENV=production --minify"
   },
   "dependencies": {
     "@mantine/core": "^7.4.2",
     "@mantine/hooks": "^7.4.2",
+    "esbuild": "^0.20.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-refresh": "^0.13.0"
