feat: adds module hash name

--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "test": "shadow-cljs compile node-tests && node out/node-tests.js",
     "start": "conc -c auto npm:watch:*",
     "release": "conc -c auto npm:release:* && npm run bundle:optimize",
-    "bundle": "esbuild --bundle public/app/lib.js --outfile=public/app/lib.bundle.js",
+    "bundle": "esbuild --bundle public/app/js/lib.js --outfile=public/app/js/lib.bundle.js",
     "watch:bundle": "npm run bundle -- --watch",
     "bundle:optimize": "npm run bundle --  --analyze --metafile=.bundle.meta.json --define:NODE_ENV=production --minify"
   },
   "dependencies": {
-    "@mantine/core": "^7.4.2",
+    "@mantine/core": "^7.6.1",
     "@mantine/hooks": "^7.4.2",
     "esbuild": "^0.20.1",
     "react": "^18.2.0",
@@ -24,17 +24,17 @@
     "react-refresh": "^0.13.0"
   },
   "devDependencies": {
-    "@testing-library/react": "^14.1.2",
+    "@testing-library/react": "^14.2.1",
     "concurrently": "^8.2.2",
-    "cssnano": "^6.0.3",
+    "cssnano": "^6.1.0",
     "global-jsdom": "9.0.1",
     "jsdom": "22.0.0",
     "jsdom-global": "3.0.2",
-    "postcss": "^8.4.33",
+    "postcss": "^8.4.35",
     "postcss-cli": "^11.0.0",
-    "postcss-import": "^16.0.0",
-    "postcss-preset-mantine": "^1.12.3",
+    "postcss-import": "^16.0.1",
+    "postcss-preset-mantine": "^1.13.0",
     "postcss-simple-vars": "^7.0.1",
-    "shadow-cljs": "^2.27.1"
+    "shadow-cljs": "^2.27.5"
   }
 }
