--- a/package.json
+++ b/package.json
@@ -10,14 +10,11 @@
     "test:watch": "shadow-cljs watch node-tests --config-merge \"{:autorun true}\"",
     "test": "shadow-cljs compile node-tests && node out/node-tests.js",
     "start": "conc -c auto npm:watch:*",
-    "release": "conc -c auto npm:release:*",
-    "bundle": "esbuild --bundle public/app/js/lib.js --outfile=public/app/js/lib.bundle.js",
-    "bundle:optimize": "npm run bundle --  --analyze --metafile=.bundle.meta.json --define:NODE_ENV=production --minify"
+    "release": "conc -c auto npm:release:*"
   },
   "dependencies": {
     "@mantine/core": "^7.6.1",
     "@mantine/hooks": "^7.4.2",
-    "esbuild": "^0.20.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-refresh": "^0.13.0"
@@ -26,6 +23,7 @@
     "@testing-library/react": "^14.2.1",
     "concurrently": "^8.2.2",
     "cssnano": "^6.1.0",
+    "esbuild": "^0.20.2",
     "global-jsdom": "9.0.1",
     "jsdom": "22.0.0",
     "jsdom-global": "3.0.2",
